syntax = "proto3";

package Business;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service Hello {
  rpc Say(SayRequest) returns (SayResponse);
  rpc SayAgain(SayRequest) returns (SayResponse);
  rpc Verify(google.protobuf.Empty) returns (Application_Array);
}

message SayRequest {
  string Name = 1;
}

message SayResponse {
  string Message = 1;
}

message Application_Array {
  repeated Application_data Applications_Array=1;
}

message Application_data {
  string name = 1;
  int32 user_id = 2;
  string message = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;
  int32 department = 6;
  int32 leave_type = 7;
  string token = 8;
}
